--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,10 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@theme {
+     --color-sidebar-background: #f8f8fa;
+}
+
 :root {
      --background: oklch(1 0 0);
      --foreground: oklch(0.14 0 0);
@@ -51,6 +55,9 @@
      --shadow-lg: 0 1px 0px 0px oklch(0 0 0 / 0), 0 4px 6px -1px oklch(0 0 0 / 0);
      --shadow-xl: 0 1px 0px 0px oklch(0 0 0 / 0), 0 8px 10px -1px oklch(0 0 0 / 0);
      --shadow-2xl: 0 1px 0px 0px oklch(0 0 0 / 0);
+
+     /* colores personalizados */
+     --background-sidebar: #f8f8fa;
 }
 
 .dark {
